changes to index

--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,7 @@
             <h2>Email</h2>
             <p>Torrtvatten@gmail.com</p>
             <h2>Vklass</h2>
-            <a
-              href="https://www.vklass.se/Class.aspx?id=a9feaac2-75d6-4e88-a798-7619d08f8c28&backPage=SchoolClasses.aspx%3fid%3db5bf211e-414f-4403-8321-e1a5569500e1"
-              target="_blank"
+            <a href="https://www.vklass.se/User.aspx?id=47767" target="_blank"
               >TE20</a
             >
           </div>
