--- a/about.html
+++ b/about.html
@@ -37,17 +37,15 @@
         </header>
         <div class="columns2">
           <div class="box2">
-            <p>
-              Welcome to my about page! Now, I won't go into much detail about
-              myself however, I don't believe that any more is necessary. Well
-              I'm a 16 year old boy who studies at Tullinge gymnasium, which is
-              a lovely medium sized highschool. On this website I will mostly
-              display stuff that I've done in class. Especially the class called
-              "digitalt skapande". We work with several different 3D programs
-              however, I believe that blender is the superior program. Why?
-              Because it's free, brilliant and most importantly, easy. There's
-              not much else left to say about me. If you have any further
-              questions please do not hesitate to contact me!
+            <p class="aboutp">
+              Welcome to my about page! Now, I won't go into much detail about myself however, I
+              don't believe that any more is necessary. Well I'm a 16 year old boy who studies at
+              Tullinge gymnasium, which is a lovely medium sized highschool. On this website I will
+              mostly display stuff that I've done in class. Especially the class called "digitalt
+              skapande". We work with several different 3D programs however, I believe that blender
+              is the superior program. Why? Because it's free, brilliant and most importantly, easy.
+              There's not much else left to say about me. If you have any further questions please
+              do not hesitate to contact me!
             </p>
           </div>
         </div>
