large changes to index and header

--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
   <body>
     <div>
       <header class="header">
-        <h1 class="logo"><a href="/index.html">H<sub>2</sub>O</a></h1>
+        <h1 class="logo">
+          <a href="/index.html">H<sub>2</sub><span class="red-o">O</span></a>
+        </h1>
         <ul class="menu">
           <li>
             <a href="/contact.html">Contact</a>
@@ -38,14 +40,14 @@
         <div class="columns2">
           <div class="box2">
             <p class="aboutp">
-              Welcome to my about page! Now, I won't go into much detail about myself however, I
-              don't believe that any more is necessary. Well I'm a 16 year old boy who studies at
-              Tullinge gymnasium, which is a lovely medium sized highschool. On this website I will
-              mostly display stuff that I've done in class. Especially the class called "digitalt
-              skapande". We work with several different 3D programs however, I believe that blender
-              is the superior program. Why? Because it's free, brilliant and most importantly, easy.
-              There's not much else left to say about me. If you have any further questions please
-              do not hesitate to contact me!
+              Welcome to my about page! My name's Max and I made this website! Now, I won't go into
+              much detail about myself however, I don't believe that any more is necessary. Well I'm
+              a 16 year old boy who studies at Tullinge gymnasium, which is a lovely medium sized
+              highschool. On this website I will mostly display stuff that I've done in class.
+              Especially the class called "digitalt skapande". We work with several different 3D
+              programs however, I believe that blender is the superior program. Why? Because it's
+              free, brilliant and most importantly, easy. There's not much else left to say about
+              me. If you have any further questions please do not hesitate to contact me!
             </p>
           </div>
         </div>
