--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
   <body>
     <div>
       <header class="header">
-        <h1 class="logo"><a href="/index.html">H<sub>2</sub>O</a></h1>
+        <h1 class="logo">
+          <a href="/index.html">H<sub>2</sub><span class="red-o">O</span></a>
+        </h1>
         <ul class="menu">
           <li>
             <a href="/contact.html">Contact</a>
@@ -38,11 +40,9 @@
         <div class="columns">
           <div class="box1">
             <h2>Email</h2>
-            <p>Torrtvatten@gmail.com</p>
-            <h2>Vklass</h2>
-            <a href="https://www.vklass.se/User.aspx?id=47767" target="_blank"
-              >TE20</a
-            >
+            <a href="mailto: Torrtvatten@gmail.com">Torrtvatten@gmail.com</a>
+            <h2><img class="vklass" src="/stuff/logo-grayscale@5x.png" alt="vklass" /></h2>
+            <a href="https://www.vklass.se/User.aspx?id=47767" target="_blank">TE20</a>
           </div>
         </div>
       </div>
