--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <div>
       <header class="header">
-        <h1 class="logo"><a href="/index.html">H<sub>2</sub>O</a></h1>
+        <h1 class="logo">
+          <a href="/index.html">H<sub>2</sub><span class="red-o">O</span></a>
+        </h1>
         <ul class="menu">
           <li>
             <a href="/contact.html" class="index-a">Contact</a>
@@ -36,8 +38,26 @@
           <h1>Projects</h1>
         </header>
         <div class="columns3">
-          <div class="box3">
-            <p>Featured</p>
+          <div class="projekt">
+            <p class="p-flygplan">Cessna 172</p>
+            <img class="flygplan" src="/stuff/ezgif-2-c3d143fe4373.gif" alt="Gif of a plane" />
+            <p class="planbeskrivning">
+              This is a Cessna 172 skyhawk that I made as a school&nbsp;project. It was made with
+              the use of Blender and Premiere pro. The whole video with sound is available
+              <a
+                target="_blank"
+                href="https://www.youtube.com/watch?v=PHYX6G9DZXU&ab_channel=MaxZalmerfelt"
+                >here!</a
+              >
+            </p>
+          </div>
+          <div class="projekt">
+            <p class="p-skog">Forest scene</p>
+            <img class="skog" src="/stuff/skog-3.jpg" alt="A picture of a forest" />
+            <p class="skogbeskrivning">
+              This lovely forest was so fun to make! Was also created in Blender, however, colours
+              were adjusted in Lightroom.
+            </p>
           </div>
         </div>
       </div>
