Addition to fluidsims in index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/reset/reset.css" />
     <link rel="stylesheet" href="/styles/index.css" />
 
@@ -42,7 +47,7 @@
             <p class="p-flygplan">Cessna 172</p>
             <img class="flygplan" src="/stuff/ezgif-2-c3d143fe4373.gif" alt="Gif of a plane" />
             <p class="planbeskrivning">
-              This is a Cessna 172 skyhawk that I made as a school&nbsp;project. It was made with
+              This is a Cessna 172 Skyhawk that I made as a school&nbsp;project. It was made with
               the use of Blender and Premiere pro. The whole video with sound is available
               <a
                 target="_blank"
@@ -57,6 +62,19 @@
             <p class="skogbeskrivning">
               This lovely forest was so fun to make! Was also created in Blender, however, colours
               were adjusted in Lightroom.
+            </p>
+          </div>
+          <div class="projekt">
+            <p class="p-vatten">Fluid simulations</p>
+            <img class="vatten" src="/stuff/ezgif-first.gif" alt="A water simulation" />
+            <img class="vatten" src="/stuff/ezgif-second.gif" alt="Another water simulation" />
+            <img class="vatten" src="/stuff/ezgif-third.gif" alt="Yet another water simulation" />
+            <p class="vattenbeskrivning">
+              Here you can see the evolution of my fluid simulations over time, from very basic
+              water to high quality whitewater. Everything was made in blender, except the
+              whitewater which I used the FLIP fluids addon to blender. I love making fluids
+              simulations, however, they take so long to render that I'll usually not finish some
+              projects.
             </p>
           </div>
         </div>
