small changes to index text responsiveness, added comments to keep track

--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
     </div>
     -
     <section>
+      <!--Container med about text-->
       <div class="container3">
         <header class="header3">
           <h1>About</h1>
