--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,9 @@
         </ul>
       </header>
     </div>
-    -
+
     <section>
+      <!--container med kontaktinformation-->
       <div class="container2">
         <header class="header2">
           <h1>Contact information</h1>
