--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <div>
+      <!--Header-->
       <header class="header">
         <h1 class="logo">
           <a href="/index.html">H<sub>2</sub><span class="red-o">O</span></a>
@@ -38,6 +39,7 @@
     </div>
 
     <section>
+      <!--början av själva projektcontainern-->
       <div class="container">
         <header class="header4">
           <h1>Projects</h1>
@@ -56,6 +58,7 @@
               >
             </p>
           </div>
+          <!--Slut av Cessnaprojektet, start av skogsprojektet-->
           <div class="projekt">
             <p class="p-skog">Forest scene</p>
             <img class="skog" src="/stuff/skog-3.jpg" alt="A picture of a forest" />
@@ -64,6 +67,7 @@
               were adjusted in Lightroom.
             </p>
           </div>
+          <!--Slut av skogsprojektet, start av fluid projektet-->
           <div class="projekt">
             <p class="p-vatten">Fluid simulations</p>
             <img class="vatten" src="/stuff/ezgif-first.gif" alt="A water simulation" />
